update on fixing compilation errors