@@ -1,28 +1,23 @@
 package repositories.inmemory;
 
 import core.Student;
-import repositories.StudentRepository;
+import org.springframework.context.annotation.Profile;
+import org.springframework.stereotype.Repository;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class InMemoryStudentRepository extends InMemoryRepository<Student, String> implements StudentRepository {
-    
+@Repository
+@Profile("inmemory")
+public class InMemoryStudentRepository extends InMemoryJpaRepository<Student, String> {
+
     @Override
-    protected String getId(Student entity) {
-        return entity.getStudentId();
+    protected String getId(Student student) {
+        return student.getStudentId();
     }
-    
-    @Override
+
+    // Custom query methods
     public List<Student> findByAcademicYear(String academicYear) {
         return storage.values().stream()
-                .filter(student -> academicYear.equals(student.getAcademicYear()))
-                .collect(Collectors.toList());
-    }
-    
-    @Override
-    public List<Student> findByMajor(String major) {
-        return storage.values().stream()
-                .filter(student -> major.equals(student.getMajor()))
-                .collect(Collectors.toList());
+            .filter(s -> academicYear.equals(s.getAcademicYear()))
+            .toList();
     }
 }
